# biberpy

./: README.md  Rsum.R  biber-dim.py  biber-mda.R  biber-mda.py  biber-variation.py  biberpy.py  brown-names.txt  brown.json.xz  brown.ol.xz  clean-conll.py  clean-numlist.py  collect-examples.sh  compare.py  conll2json.py  en.properties  en.tag.num  en_levels.csv  en_levels.lex  es.properties  es.tag.num  fr.properties  frequency-bands.py  get-brown-annot.sh  lob.ol.xz  lr-describe-features.R  pyproject.toml  restoredocids.py  ru.properties  ru_levels.lex  smallutils.py  spacy2json.py  udon-process.py
